# AGH-SO

./: README.md
cw01/zad1/: CMakeLists.txt  library.c  library.h  test.c
cw01/zad2/: CMakeLists.txt  raport2.txt  test.c
cw01/zad3a/: CMakeLists.txt  results3a.txt  test.c
cw01/zad3b/: CMakeLists.txt  results3b.txt  test.c  test2.c
cw02/zad1/: CMakeLists.txt  tests.sh  wyniki.txt  zad1.c
cw02/zad2a/: CMakeLists.txt  zad2a.c
cw02/zad2b/: CMakeLists.txt  zad2b.c
cw03/zad1/: CMakeLists.txt  zad1.c
cw03/zad2/: CMakeLists.txt  proba.txt  zad2.c
cw03/zad3a/: CMakeLists.txt  proba.txt  prog.c  zad3a.c
cw04/zad1a/: CMakeLists.txt  zad1a.c
cw04/zad1b/: CMakeLists.txt  zad1b.c
cw04/zad2/: CMakeLists.txt  zad2.c
cw04/zad3/: CMakeLists.txt  zad3.c
cw05/zad1/: CMakeLists.txt  proba.txt  proba1.txt  proba2.txt  skrypt.txt  zad1.c
cw05/zad2/: CMakeLists.txt  master.c  slave.c
cw06/zad1/: CMakeLists.txt  client.c  ipcutil.h  server.c
cw06/zad2/: CMakeLists.txt  client.c  ipcutil.h  server.c
cw07/zad1/: CMakeLists.txt  barber.c  client.c  ipcutil.h
cw07/zad2/: barber.c  client.c
cw08/zad1/: 3.pgm  CMakeLists.txt  Times.txt  f1  f2  f3  f4  f5  filter.c  options.txt  run.sh  zad1.c
cw09/zad1/: CMakeLists.txt  zad1.c
cw09/zad2/: CMakeLists.txt  options.txt  zad2.c
cw10/zad1/: CMakeLists.txt  Makefile  client.c  ipcutil.h  options.txt  server.c
