cmake_minimum_required(VERSION 3.9)
project(zad3b C)

include_directories("${PROJECT_SOURCE_DIR}/../zad1")

add_executable(../zad2/test.c)
add_executable(../zad2/test.c)
add_executable(test.c)
add_library(zad3_static STATIC ../zad1/library.c ../zad1/library.h)
add_library(zad3_shared SHARED ../zad1/library.c ../zad1/library.h)

add_executable(../zad2/test.c)
add_executable(../zad2/test.c)
add_executable(test.c)
add_library(zad3_statico2 STATIC ../zad1/library.c ../zad1/library.h)
add_library(zad3_sharedo2 SHARED ../zad1/library.c ../zad1/library.h)

add_executable(../zad2/test.c)
add_executable(../zad2/test.c)
add_executable(test.c)
add_library(zad3_statico3 STATIC ../zad1/library.c ../zad1/library.h)
add_library(zad3_sharedo3 SHARED ../zad1/library.c ../zad1/library.h)

target_link_libraries(zad3static zad3_static)
target_link_libraries(zad3shared zad3_static)
target_link_libraries(zad3dynamic ${CMAKE_DL_LIBS})
target_link_libraries(zad3statico2 zad3_static)
target_link_libraries(zad3sharedo2 zad3_static)
target_link_libraries(zad3dynamico2 ${CMAKE_DL_LIBS})
target_link_libraries(zad3statico3 zad3_static)
target_link_libraries(zad3sharedo3 zad3_static)
target_link_libraries(zad3dynamico3 ${CMAKE_DL_LIBS})

set_target_properties(zad3static zad3shared zad3dynamic PROPERTIES COMPILE_FLAGS -O)
set_target_properties(zad3statico2 zad3sharedo2 zad3dynamico2 PROPERTIES COMPILE_FLAGS -O2)
set_target_properties(zad3statico3 zad3sharedo3 zad3dynamico3 PROPERTIES COMPILE_FLAGS -O3)

add_custom_target(test11 ALL COMMAND ./zad3static cd 3000 1000 ar 1500 s 230 COMMAND echo Static library -O: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
add_custom_target(test21 ALL COMMAND ./zad3shared cd 3000 1000 ar 1500 s 230 COMMAND echo Shared library -O: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3shared test2)
add_custom_target(test31 ALL COMMAND ./zad3dynamic cd 3000 1000 ar 1500 s 230 COMMAND echo Dynamic library -O: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3dynamic test3)
add_custom_target(test12 ALL COMMAND ./zad3statico2 cd 3000 1000 ar 1500 s 230 COMMAND echo Static library -O2: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3static test12 )
add_custom_target(test22 ALL COMMAND ./zad3sharedo2 cd 3000 1000 ar 1500 s 230 COMMAND echo Shared library -O2: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3shared test22)
add_custom_target(test32 ALL COMMAND ./zad3dynamico2 cd 3000 1000 ar 1500 s 230 COMMAND echo Dynamic library -O2: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3dynamic test32)
add_custom_target(test13 ALL COMMAND ./zad3statico3 cd 3000 1000 ar 1500 s 230 COMMAND echo Static library -O3: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3static test13 )
add_custom_target(test23 ALL COMMAND ./zad3sharedo3 cd 3000 1000 ar 1500 s 230 COMMAND echo Shared library -O3: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3shared test23)
add_custom_target(test33 ALL COMMAND ./zad3dynamico3 cd 3000 1000 ar 1500 s 230 COMMAND echo Dynamic library -O3: >>results3b.txt COMMAND cat raport2.txt>>results3b.txt COMMAND rm raport2.txt)
#add_dependencies(zad3dynamic test33)
